5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1834_2603.log
== TEST (2019-06-27 15:40:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
linha = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	matriz[i:] = sorted(matriz[i:],reverse=true)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:40:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
linha = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	matriz[i:] = sorted(matriz[i:],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:40:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
linha = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	matriz[i:] = sorted(matriz,reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:41:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
linha = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	matriz = sorted(matriz,reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:44:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
linha = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	matriz[i:] = sorted(matriz,reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:44:35) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
linha = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	matriz[i:] = sorted(matriz[i:],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:45:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
linha = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	matriz = sorted(matriz[i:],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:48:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(linha):
	linha = matriz[i:]
	linha = sorted(linha,reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:50:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	linha = matriz[i:]
	linha = sorted(linha,reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:51:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	linha = matriz[i:]
	linha = sorted(reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:51:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	linha = matriz[i:]
	linha = sorted(linha,reverse=False)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:54:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	linha = matriz[i:]
	linha = linha.reverse()
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:55:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
from numpy.ndarray import*

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	linha = matriz[i:]
	linha = linha.reverse()
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:02:16) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]
i= 0
b = sorted(matriz[i:],reverse=True)

print()
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:02:19) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]
i= 0
b = sorted(matriz[i:],reverse=True)

print(b)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:03:05) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]
i= 0
b = matriz[i:]

print(b)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:03:17) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]
i= 0
b = matriz[i,:]

print(b)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:03:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	linha = matriz[i,:]
	linha = sorted(linha,reverse=False)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:15:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	matriz[i,:] =  sorted(matriz[i,:],reverse=False)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:16:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	matriz[i,:] =  sorted(matriz[i,:],reverse=False)
	print(matriz[i,:])
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:17:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

i = 0
matriz[i,:] =  sorted(matriz[i,:],reverse=False)
	print(matriz[i,:])
	
		
-- ERROR:
File "XXXX", line 10
    print(matriz[i,:])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:17:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

i = 0
matriz[i,:] =  sorted(matriz[i,:],reverse=False)
print(matriz[i,:])
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:18:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

i = 0
matriz[i,:] =  sorted(matriz[i,:],reverse=True)
print(matriz[i,:])
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:18:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	matriz[i,:] =  sorted(matriz[i,:],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:19:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:19:32) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
lin = shape(matriz)[0]
col = shape(matriz)[1]

for i in range(lin):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- EXECUTION TIME:
1.10586
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:26:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))
#lin = shape(matriz)[0]

for i in range(shape(matriz)[1]):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:27:36) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

for i in range(shape(matriz)[1]):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- EXECUTION TIME:
1.09361
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

print((shape(matriz)[1])
#for i in range(shape(matriz)[1]):
#	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
#print(matriz)
	
		
-- ERROR:
File "XXXX", line 12
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:20) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

print(shape(matriz)[1])
#for i in range(shape(matriz)[1]):
#	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
#print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

print(shape(matriz)[1])
#for i in range(shape(matriz)[1]):
#	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
#print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:28:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

print(shape(matriz)[1])
#for i in range(shape(matriz)[1]):
#	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
#print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:29:27) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

for i in range(shape(matriz)[1]):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

for i in range(shape(matriz)[1]):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

for i in range(shape(matriz)[1]):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:50:44) 
-- CODE:
from numpy import *
from numpy.linalg import *

matriz = array(eval(input("digite uma matiz")))

for i in range(shape(matriz)[1]):
	matriz[:,i] =  sorted(matriz[:,i],reverse=True)
print(matriz)
	
		
-- EXECUTION TIME:
1.29022
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
